--- a/Frontend/src/components/Header/Header.scss
+++ b/Frontend/src/components/Header/Header.scss
@@ -21,8 +21,28 @@
   span {
     border: 2px solid white;
     border-radius: 50%;
-    padding: .5rem;
+    padding: 0.5rem;
     cursor: pointer;
     background-color: gray;
+  }
+}
+.header-profile {
+  height: 50px;
+  width: 50px;
+  border-radius: 50%;
+  border: 2px solid white;
+}
+.header-right {
+  display: flex;
+  align-items: center;
+  gap: 1rem;
+
+  span {
+    transition: all 100ms ease-in-out;
+    &:hover {
+      background-color: white;
+      color: black;
+      cursor: pointer;
+    }
   }
 }
